[package]
name = "tori-scrape-lib-rs"
version = "0.1.0"
edition = "2021"
authors = ["Markus H (MawKKe) <markus@mawkke.fi>"]
license-file = "LICENCE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
chrono-tz = "0.8.5"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
lazy_static = "1.4.0"
regex = "1.10.3"
scraper = "0.18.1"
